src/parse-format.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define([], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory();
  }
})(this, function() {
  "use strict";

  function peg$subclass(child, parent) {
    function C() { this.constructor = child; }
    C.prototype = parent.prototype;
    child.prototype = new C();
  }

  function peg$SyntaxError(message, expected, found, location) {
    var self = Error.call(this, message);
    if (Object.setPrototypeOf) {
      Object.setPrototypeOf(self, peg$SyntaxError.prototype);
    }
    self.expected = expected;
    self.found = found;
    self.location = location;
    self.name = "SyntaxError";
    return self;
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$padEnd(str, targetLength, padString) {
    padString = padString || " ";
    if (str.length > targetLength) { return str; }
    targetLength -= str.length;
    padString += padString.repeat(targetLength);
    return str + padString.slice(0, targetLength);
  }

  peg$SyntaxError.prototype.format = function(sources) {
    var str = "Error: " + this.message;
    if (this.location) {
      var src = null;
      var k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      var s = this.location.start;
      var loc = this.location.source + ":" + s.line + ":" + s.column;
      if (src) {
        var e = this.location.end;
        var filler = peg$padEnd("", s.line.toString().length);
        var line = src[s.line - 1];
        var last = s.line === e.line ? e.column : line.length + 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + s.line + " | " + line + "\n"
            + filler + " | " + peg$padEnd("", s.column - 1)
            + peg$padEnd("", last - s.column, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  };

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
      literal: function(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class: function(expectation) {
        var escapedParts = expectation.parts.map(function(part) {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any: function() {
        return "any character";
      },

      end: function() {
        return "end of input";
      },

      other: function(expectation) {
        return expectation.description;
      }
    };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = expected.map(describeExpectation);
      var i, j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== undefined ? options : {};

    var peg$FAILED = {};
    var peg$source = options.grammarSource;

    var peg$startRuleFunctions = { Main: peg$parseMain };
    var peg$startRuleFunction = peg$parseMain;

    var peg$c0 = ";";
    var peg$c1 = "[";
    var peg$c2 = "]";
    var peg$c3 = ",";
    var peg$c4 = ".";
    var peg$c5 = "<>";
    var peg$c6 = "<=";
    var peg$c7 = "<";
    var peg$c8 = ">=";
    var peg$c9 = ">";
    var peg$c10 = "=";
    var peg$c11 = "e";
    var peg$c12 = "_";
    var peg$c13 = "\"";
    var peg$c14 = "\\";
    var peg$c15 = "*";
    var peg$c16 = "E";
    var peg$c17 = "/";
    var peg$c18 = "#";
    var peg$c19 = "0";
    var peg$c20 = "?";
    var peg$c21 = "%";
    var peg$c22 = "dddd";
    var peg$c23 = "d";
    var peg$c24 = "aaaa";
    var peg$c25 = "a";
    var peg$c26 = "ddd";
    var peg$c27 = "aaa";
    var peg$c28 = "dd";
    var peg$c29 = "yyy";
    var peg$c30 = "y";
    var peg$c31 = "mm";
    var peg$c32 = "m";
    var peg$c33 = "h";
    var peg$c34 = "am/pm";
    var peg$c35 = "a/p";
    var peg$c36 = "s";

    var peg$r0 = /^[+\-]/;
    var peg$r1 = /^[0-9]/;
    var peg$r2 = /^[1-9]/;
    var peg$r3 = /^[^"]/;
    var peg$r4 = /^[ \t]/;
    var peg$r5 = /^[^E;0#?[\]\/]/i;

    var peg$e0 = peg$literalExpectation(";", false);
    var peg$e1 = peg$otherExpectation("decimal format token");
    var peg$e2 = peg$literalExpectation("[", false);
    var peg$e3 = peg$literalExpectation("]", false);
    var peg$e4 = peg$literalExpectation(",", false);
    var peg$e5 = peg$literalExpectation(".", false);
    var peg$e6 = peg$literalExpectation("<>", false);
    var peg$e7 = peg$literalExpectation("<=", false);
    var peg$e8 = peg$literalExpectation("<", false);
    var peg$e9 = peg$literalExpectation(">=", false);
    var peg$e10 = peg$literalExpectation(">", false);
    var peg$e11 = peg$literalExpectation("=", false);
    var peg$e12 = peg$classExpectation(["+", "-"], false, false);
    var peg$e13 = peg$classExpectation([["0", "9"]], false, false);
    var peg$e14 = peg$literalExpectation("e", true);
    var peg$e15 = peg$otherExpectation("integer-number");
    var peg$e16 = peg$classExpectation([["1", "9"]], false, false);
    var peg$e17 = peg$otherExpectation("hidden");
    var peg$e18 = peg$literalExpectation("_", false);
    var peg$e19 = peg$anyExpectation();
    var peg$e20 = peg$otherExpectation("literal");
    var peg$e21 = peg$otherExpectation("quoted-string");
    var peg$e22 = peg$literalExpectation("\"", false);
    var peg$e23 = peg$classExpectation(["\""], true, false);
    var peg$e24 = peg$otherExpectation("escaped-char");
    var peg$e25 = peg$literalExpectation("\\", false);
    var peg$e26 = peg$literalExpectation("*", false);
    var peg$e27 = peg$otherExpectation("space");
    var peg$e28 = peg$classExpectation([" ", "\t"], false, false);
    var peg$e29 = peg$otherExpectation("separator");
    var peg$e30 = peg$literalExpectation("E", false);
    var peg$e31 = peg$literalExpectation("/", false);
    var peg$e32 = peg$otherExpectation("unmapped-char");
    var peg$e33 = peg$classExpectation(["E", ";", "0", "#", "?", "[", "]", "/"], true, true);
    var peg$e34 = peg$otherExpectation("digit-mask");
    var peg$e35 = peg$literalExpectation("#", false);
    var peg$e36 = peg$literalExpectation("0", false);
    var peg$e37 = peg$literalExpectation("?", false);
    var peg$e38 = peg$literalExpectation("%", false);
    var peg$e39 = peg$literalExpectation("dddd", true);
    var peg$e40 = peg$literalExpectation("d", true);
    var peg$e41 = peg$literalExpectation("aaaa", true);
    var peg$e42 = peg$literalExpectation("a", false);
    var peg$e43 = peg$literalExpectation("ddd", true);
    var peg$e44 = peg$literalExpectation("aaa", false);
    var peg$e45 = peg$literalExpectation("dd", true);
    var peg$e46 = peg$literalExpectation("yyy", true);
    var peg$e47 = peg$literalExpectation("y", true);
    var peg$e48 = peg$literalExpectation("mm", false);
    var peg$e49 = peg$literalExpectation("m", true);
    var peg$e50 = peg$literalExpectation("mm", true);
    var peg$e51 = peg$literalExpectation("h", true);
    var peg$e52 = peg$literalExpectation("AM/PM", true);
    var peg$e53 = peg$literalExpectation("A/P", true);
    var peg$e54 = peg$literalExpectation("s", true);

    var peg$f0 = function(r, c) {return c};
    var peg$f1 = function(r, h) {
      return [r, ...h];
    };
    var peg$f2 = function(condition, format) {
      setFlags(format);
      return {condition, format}
    };
    var peg$f3 = function(mantissa, exponent) {
      return {mantissa, exponent, type:'scientific'}
    };
    var peg$f4 = function(int, fraction) {
      return {int, fraction, type: 'fraction'}
    };
    var peg$f5 = function(int, separator, decimal) {
      const parts = [...int.parts, ...decimal.parts] 
      const ans = {int, decimal, type: 'fixed'}
      countTrailingCommas(ans, parts)
      countPercentSymbols(ans, parts)
      return ans;
    };
    var peg$f6 = function(i) {
      return i || computeRange([])
    };
    var peg$f7 = function(int) {
      const ans = {int, type: 'integer'};
      countTrailingCommas(ans, int.parts)
      countPercentSymbols(ans, int.parts)
      return ans;
    };
    var peg$f8 = function(parts) {
      return computeRange(parts)
    };
    var peg$f9 = function(parts) {
      // Reject formats without a digit mask
      return parts.totalPositions >= 1
    };
    var peg$f10 = function(parts) {
      return nonEmpty(parts)
    };
    var peg$f11 = function(prefix, digits) {
      return nonEmpty(computeRange([...prefix, ...digits]))
    };
    var peg$f12 = function(compare, value) {
      return $({compare, value})
    };
    var peg$f13 = function() {return $({type:'literal', mask: ''})};
    var peg$f14 = function() {return $({type: 'literal', mask: '.'})};
    var peg$f15 = function() {return $({type:'literal', mask: ','})};
    var peg$f16 = function(s) {return Number(s)};
    var peg$f17 = function(n) {return parseInt(n)};
    var peg$f18 = function(mask) {return $({type: 'hidden',  mask})};
    var peg$f19 = function(mask) {
      return $(mask, 'literal')
    };
    var peg$f20 = function(literal) {return literal};
    var peg$f21 = function(mask) {
      return $(mask, 'fill')
    };
    var peg$f22 = function(d) {
      return $({type: 'separator', mask: d})
    };
    var peg$f23 = function(e, sign, mask) {
      nonEmpty(mask)
      return $({sign, mask}, 'exponent')
    };
    var peg$f24 = function(s) {return s};
    var peg$f25 = function(numerator, denominator) {
      return $({numerator, denominator: nonEmpty(computeRange(denominator))}, 'fraction')
    };
    var peg$f26 = function(numerator, denominator) {
      return $({numerator, denominator}, 'fixed-fraction')
    };
    var peg$f27 = function(mask) {return $({type: 'literal', mask})};
    var peg$f28 = function(mask) {
      return $({type: 'digit', mask})
    };
    var peg$f29 = function(f) {return {type: 'datetime', parts: resolveMonthOrMinutes(f)}};
    var peg$f30 = function(mask) {
      return $(mask.toLowerCase(), 'date')
    };
    var peg$f31 = function() {return options.undocumentedFeatures};
    var peg$f32 = function() {return 'dddd'};
    var peg$f33 = function() {return 'ddd'};
    var peg$f34 = function() {return 'yyyy'};
    var peg$f35 = function() {return 'yy'};
    var peg$f36 = function(x) {return x.substr(0,5)};
    var peg$f37 = function(mask) {return $(mask.toLowerCase(), 'datetime')};
    var peg$f38 = function(mask) {
      return $(mask.toLowerCase(), 'time')
    };
    var peg$f39 = function(x) {return x.substr(0,2)};
    var peg$f40 = function(x) {return $({mask:'.0', zfill: x.length-1}, 'time')};
    var peg$f41 = function() {return $({type:'literal',mask:','})};
    var peg$f42 = function() {return $({type: 'literal', mask:'/'})};
    var peg$f43 = function(x) {
      return $({type:'time', mask: '[' + x[0].toLowerCase() + ']', zfill: x.length})
    };

    var peg$currPos = 0;
    var peg$savedPos = 0;
    var peg$posDetailsCache = [{ line: 1, column: 1 }];
    var peg$maxFailPos = 0;
    var peg$maxFailExpected = [];
    var peg$silentFails = 0;

    var peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function offset() {
      return peg$savedPos;
    }

    function range() {
      return {
        source: peg$source,
        start: peg$savedPos,
        end: peg$currPos
      };
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos];
      var p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line: details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;

        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos);
      var endPosDetails = peg$computePosDetails(endPos);

      return {
        source: peg$source,
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseMain() {
      var s0;

      s0 = peg$parseMultiFormat();

      return s0;
    }

    function peg$parseMultiFormat() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseConditionalFormat();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 59) {
          s4 = peg$c0;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseConditionalFormat();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s3 = peg$f0(s1, s5);
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 59) {
            s4 = peg$c0;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseConditionalFormat();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s3 = peg$f0(s1, s5);
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        peg$savedPos = s0;
        s0 = peg$f1(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseConditionalFormat() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseCondition();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      s2 = peg$parseFormat();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFormat() {
      var s0;

      s0 = peg$parseScientificFormat();
      if (s0 === peg$FAILED) {
        s0 = peg$parseFractionFormat();
        if (s0 === peg$FAILED) {
          s0 = peg$parseFixedFormat();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIntegerFormat();
            if (s0 === peg$FAILED) {
              s0 = peg$parseDateTimeFormat();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseScientificFormat() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseFixedFormat();
      if (s1 === peg$FAILED) {
        s1 = peg$parseIntegerFormat();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseExponent();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFractionFormat() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseIntegerPartFormat();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      s2 = peg$parseFraction();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFixedFormat() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseOptionalIntegerPartFormat();
      s2 = peg$parseDecimalSeparator();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDecimalPartFormat();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s1, s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOptionalIntegerPartFormat() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseIntegerPartFormat();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      peg$savedPos = s0;
      s1 = peg$f6(s1);
      s0 = s1;

      return s0;
    }

    function peg$parseIntegerFormat() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseIntegerPartFormat();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseIntegerPartFormat() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseFraction();
      if (s4 === peg$FAILED) {
        s4 = peg$parseExponent();
        if (s4 === peg$FAILED) {
          s4 = peg$parseDecimalSeparator();
        }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseIntegerFormatToken();
        if (s4 !== peg$FAILED) {
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parseFraction();
          if (s4 === peg$FAILED) {
            s4 = peg$parseExponent();
            if (s4 === peg$FAILED) {
              s4 = peg$parseDecimalSeparator();
            }
          }
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = undefined;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseIntegerFormatToken();
            if (s4 !== peg$FAILED) {
              s2 = s4;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f8(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseNonEmptyIntegerPartFormat() {
      var s0, s1, s2;
